## Process this file with automake to produce Makefile.in.

SUBDIRS = C de es hu ja nl no pl pt ru sk sv

EXTRA_DIST = 				\
	sgmldocs.make gnumeric-doc.make make-func-list.pl \
	translating.sgml		\
	Design				\
	Future-Roadmap			\
	README				\
	saving.txt			\
	writing-functions.sgml		\
	excel-format-doc.txt		\
	linux-expo-99-gnumeric.tex      \
	linuxexpo.sty 			\
	Dependencies.txt 		\
	Styles.txt 			\
	features.txt 			\
	pref-attributes.txt 		\
	guile-gnumeric.txt		\
	python-gnumeric.txt 		\
	stf-export.txt 			\
	stf-parser.txt

docname ?= gnumeric
